styles/scss/write/write.scss
$form-element-width: 682px;
$margin-in-between: 1rem;

@mixin text-form-input {
  width: $form-element-width;
  margin-bottom: $margin-in-between;
  border: none;
  outline: none;

  &::placeholder {
    color: var(--body-text-3);
  }
}

.write-section form {
  display: flex;
  flex-direction: column;

  .title {
    resize: none;

    @include text-form-input;
    @include heading-font($h2-font-size);
    @include font-style-change(1023px, $h2-font-size-mobile);
  }

  .description {
    resize: none;
    font-family: var(--font-body);
    color: var(--body-text-1);

    @include text-form-input;
    @include body-intro-text;
  }
}

/// Input Type 1 ///

.write-section .tags-input {
  margin-bottom: $margin-in-between;

  label {
    color: var(--heading);
    font-weight: 700;
    background-color: var(--card-bg-1);
    padding: 0.375rem 0.875rem;
    border-top-left-radius: 8px;
    border-top-right-radius: 24px;
  }

  .input {
    width: $form-element-width;
    background-color: var(--card-bg-1);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.625rem 0.875rem;
    border-radius: 4px;
    border-top-left-radius: 0px;

    input {
      border: none;
      outline: none;
      background-color: var(--card-bg-1);
      width: 95%;
      @include medium-text;

      &::placeholder {
        color: var(--body-text-3);
      }
    }

    .add-btn {
      border: none;
      outline: none;
      height: 24px;
      width: 24px;
      border-radius: 2px;
      background-color: var(--accent);
    }
  }
}

.write-section .tags-input .display-tags {
  width: $form-element-width;
  margin-top: 0.5rem;

  display: grid;
  gap: 0.4em;
  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));

  .tag {
    background: var(--card-bg-1);
    padding: 0.375rem 1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-radius: 4px;

    button {
      border: none;
      outline: none;
      height: 24px;
      width: 24px;
      border-radius: 2px;
      background-color: var(--body-text-1);
    }
  }
}

.write-section .image-input {
  width: $form-element-width;

  .input {
    margin-bottom: 0.5rem;
  }

  .note {
    font-family: var(--font-body);
    color: var(--body-text-1);
    font-size: 17px;
    line-height: 135%;
    margin-bottom: 1rem;
  }

  .display-cover-img img {
    width: $form-element-width;
    border-radius: 8px;
  }
}

.upload-img {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: $form-element-width;
  background-color: var(--card-bg-1);
  border-radius: 4px;

  .link {
    font-family: var(--font-body);
    color: var(--body-text-1);
    font-size: 17px;
    // flex-grow: 1;
    width: 65%;
    margin-left: 0.5em;
    margin-right: 0.5em;
    overflow-x: scroll;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  .clipboard-icon {
    margin-right: 0.5rem;

    svg path {
      stroke: var(--body-text-1);
    }
  }
}

/// Content Editor ///

$full-mode-editor-width: 100%;

.content-editor {
  position: relative;
}

.content-editor .raise-header {
  /// styles to make it sticky and look apart
  position: sticky;
  top: 0;
  z-index: 999;
  background-color: var(--primary);
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
  border-top-left-radius: 8px;
  border-top-right-radius: 24px;
}

.content-editor .header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: $form-element-width;
  margin-top: $margin-in-between;

  label {
    color: var(--heading);
    font-weight: 700;
    background-color: var(--card-bg-1);
    // padding: 0.375rem 0.875rem;
    padding: 1rem;
    border-top-left-radius: 8px;
    border-top-right-radius: 24px;
  }

  .action-btns {
    display: flex;
    justify-content: center;
    align-items: center;

    button {
      border: none;

      // padding at top and bottom are 0.87rem
      // to make buttons touch content editor
      padding: 0.87rem 0.813rem;

      svg {
        // to center icon
        display: flex;
      }
    }

    .show-btn {
      border-top-left-radius: 24px;
    }

    .full-mode-btn {
      border-top-right-radius: 24px;
    }

    .active {
      background-color: var(--accent) !important;

      svg path {
        stroke: var(--primary);
      }
    }

    .inactive {
      svg path {
        stroke: var(--body-text-1);
      }
    }
  }
}

.content-editor .full-mode-header {
  width: $full-mode-editor-width !important;
}

.content-editor .editor-mode-0 {
  .content {
    transform-origin: bottom;
    height: auto;

    width: $form-element-width;
    border: none;
    border-radius: 8px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    resize: none;
    background-color: var(--card-bg-1);
    padding: 1.375rem 1rem;
    outline: none;

    @include body-main-text;

    &::placeholder {
      color: var(--body-text-3);
    }
  }
}

@mixin preview-post-content {
  p {
    margin: 1rem auto;
    line-height: 140%;
  }

  pre {
    overflow: scroll;
  }
}

.content-editor .editor-mode-1 {
  width: $form-element-width;
  padding: 1rem;
  background-color: var(--card-bg-1);

  @include preview-post-content;
  @include body-main-text;
}

.content-editor .full-mode-editor {
  display: flex;
  justify-content: space-between;
  // width: $form-element-width;

  textarea,
  .preview {
    width: 50%;
  }

  .editor-mode-1 {
    padding-top: 1rem;
  }

  .preview {
    overflow-wrap: break-word;

    padding: 1rem;
    background-color: var(--card-bg-1);
    border-bottom-right-radius: 8px;

    @include preview-post-content;
    @include body-main-text;
  }

  .content {
    border: none;
    border-radius: 8px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    resize: none;
    background-color: var(--card-bg-1);
    padding: 1.375rem 1rem;
    outline: none;

    @include body-main-text;

    &::placeholder {
      color: var(--body-text-3);
    }
  }
}

/// MetaData ///

.post-metadata {
  margin-top: $margin-in-between;

  .post-metadata-item {
    $margin-between-elements: 0.5rem;

    display: flex;
    align-items: center;
    margin-bottom: $margin-between-elements;

    input[type="checkbox"] {
      position: absolute;
      left: -100vw;
    }

    .box {
      display: inline-block;
      width: 24px;
      height: 24px;
      border-radius: 4px;
      background: var(--red);
      margin-right: $margin-between-elements;

      $margin-between-elements: 0.5rem;

      &:hover {
        cursor: pointer;
      }
    }

    svg {
      margin-right: $margin-between-elements;

      path {
        stroke: var(--body-text-1);
      }
    }
  }

  .rotate svg {
    transform: rotate(-90deg);
  }
}

.write-section .save-btn {
  width: 212px;
}

